--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <div class="black">
@@ -83,7 +84,30 @@
         </div>
     </div>
 
+<div class="Info2">
+    <div class="Info2Container">
+        <h3>HAPS MOMENTS</h3>
+    </div>
+</div>
+    <div class="Gallery2">
+        <div class="gallery2Container">
+          <div class="box1"><video src="https://happenstance.com/storage/media/erhWknKJC8nOXn0698wxGDKlRVOmWVc3eDyuZilP.mp4" controls></video><h3>
+Every Step, Perfectly Aligned - Nuhman</h3></div>
+          <div class="box1"><img src="https://happenstance.com/storage/media/catalogue/CbSy17jAUS55uKJY3Woa5RFmctuKx7uZOzWltnsI.webp" alt=""></div>
+          <div class="box1"><img src="https://happenstance.com/storage/media/catalogue/n8Boi2GRBu6t0fVd1QIB6y2vQQlRNxMY52m6wsrn.webp" alt=""></div>
+          <div class="box1"><video src="https://happenstance.com/storage/media/lBtvd2EYBeNJjhVL7VqYnnamiEmNW7FIzo3Ooh2y.mp4" controls></video></div>
+          <div class="box1"><video src="https://happenstance.com/storage/media/XxxdiHknNMSPjUj0h7CVbn9uRmT6grs2IhwO31Nr.mp4" controls></video></div>
+          <div class="box1"><video src="https://happenstance.com/storage/media/BOpbn3INagK7qg4qXISUEryL901ER0E0HmbqfKu5.mp4" controls></video></div>
+          <div class="box1"><img src="https://happenstance.com/storage/media/catalogue/kiQhuokkEFwoTyhU65wzXVXFO1QXIChLI8KVzHkp.webp" alt=""></div>
+          <div class="box1"><img src="https://happenstance.com/storage/media/catalogue/uLMBA7CegeKFCnMYrxXlG1Z56Mg414NzzwGwONGe.webp" alt=""></div>
+          <div class="box1"><img src="https://happenstance.com/storage/media/catalogue/uLMBA7CegeKFCnMYrxXlG1Z56Mg414NzzwGwONGe.webp" alt=""></div>
+          <div class="box1"><img src="https://happenstance.com/storage/media/catalogue/uLMBA7CegeKFCnMYrxXlG1Z56Mg414NzzwGwONGe.webp" alt=""></div>
+          <div class="box1"><video src="https://happenstance.com/storage/media/qxqz7h6ur9LJjapNvuNAiKPouRwCb0QgJyJIHUNi.mp4" controls></video></div>
+          <div class="box1"><video src="https://happenstance.com/storage/media/IKt603jRWCDXvpMPXQqjFbSl4uQ2RtP6fb0sRLNY.mp4" controls></video></div>
+        </div>
+        
 
+    </div>
     
 
 </body>
